# falcon-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/plans/: 2026-02-05-falcon-rs-design.md  2026-02-05-falcon-rs-implementation.md  2026-02-05-nist-kat-signing.md  2026-02-05-nist-kat-verification.md  2026-02-05-repo-cleanup.md
examples/: README.md  basic_usage.rs
scripts/: compare_drbg.py  extract_constants.py  generate_hash_to_point_kat.py  generate_sign_kat.py  parse_nist_kat.py
src/: common.rs  constants.rs  encoding.rs  falcon.rs  ffsampling.rs  fft.rs  hash_to_point.rs  hints.rs  lib.rs  nist_compat.rs  nist_drbg.rs  ntrugen.rs  ntt.rs  packing.rs  poseidon_hash.rs  rng.rs  samplerz.rs  serialize.rs  wasm.rs
test_vectors/: hash_to_point_kat.json  nist_kat.json  samplerz_kat512_python.json  sign_kat.json
tests/: README.md  cross_language_test.rs  falcon_test.rs  generate_test_vectors.rs  nist_kat_sign_test.rs  nist_kat_test.rs  samplerz_kat.rs  secret_key_from_bytes_test.rs  test_msg_point.rs  test_sign_for_starknet.rs  wasm_bindings_test.rs
