[package]
name = "falcon-rs"
version = "0.1.0"
edition = "2021"
description = "Falcon-512 signature scheme with WASM support"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha3 = { version = "0.10", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", optional = true }
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[features]
default = ["shake"]
shake = ["sha3", "getrandom"]
wasm = ["wasm-bindgen", "js-sys", "getrandom/js", "shake"]
